force-app/main/default/objects/vlocity_cmt__QuoteAppliedPromotionItem__c/vlocity_cmt__QuoteAppliedPromotionItem__c.object-meta.xml
<CustomObject>
    <description>A Quote Applied Promotion affects one or more quote items. This object is the intersection between a Quote Applied Promotion and a Quote Line Item that is affected by it.</description>
    <label>Quote Applied Promotion Affected Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Applied Promotion Affected Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>