force-app/main/default/objects/vlocity_cmt__QuoteAppliedPromotionItem__c/fields/vlocity_cmt__MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MaxQuantity__c</fullName>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>