force-app/main/default/objects/vlocity_cmt__QuoteAppliedPromotionItem__c/fields/vlocity_cmt__QuoteAppliedPromotionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteAppliedPromotionId__c</fullName>
    <label>Quote Applied Promotion</label>
    <referenceTo>vlocity_cmt__QuoteAppliedPromotion__c</referenceTo>
    <relationshipLabel>Quote Applied Promotion Affected Items</relationshipLabel>
    <relationshipName>QuoteAppliedPromotionAffectedItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>